--- a/DreamDwellReality/src/App.css
+++ b/DreamDwellReality/src/App.css
@@ -46,3 +46,19 @@
   font-size: 18px;
   font-style: normal;
 }
+body{
+  font-family: serif;
+  background-color: rgba(217, 217, 217, 1);
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+}
+.rainbow-green{
+  background-image: linear-gradient(to right, green, blue);
+}
+.text-custom-green{
+  color: #38AD0D;
+}
+/* // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900 */
