--- a/DreamDwellReality/src/App.css
+++ b/DreamDwellReality/src/App.css
@@ -72,6 +72,11 @@ body{
 .radius-tb-cornerImg{
   border-radius: 1.5rem 1.5rem 1.5rem 5.5rem;
 }
+.footer {
+  font-family: "Montaga", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 /* // <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900 */
