--- a/DreamDwellReality/src/App.css
+++ b/DreamDwellReality/src/App.css
@@ -77,6 +77,8 @@ body{
   font-weight: 400;
   font-style: normal;
 }
-
+.text-shad{
+  text-shadow: 1px 1px 5px green  ;
+}
 /* // <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900 */
